# ghc-T10491

./: Slice.hs  notes.mkd  t10491.cabal  test.sh
